# master-thesis-project

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: compare.yaml  eval.yaml  train.yaml
configs/comparator/: default.yaml
configs/data/: cifar10.yaml  emnist_letters.yaml  fashion_mnist.yaml  mnist.yaml
configs/experiment/: sweep_num_hidden_layers.yaml  sweep_num_hidden_layers_convolutional.yaml
configs/logger/: comet.yaml  neptune.yaml  wandb.yaml
configs/model/: convolutional_1x28x28_20x32_10.yaml  convolutional_3x32x32_20x32_10.yaml  dense_100x100.yaml  dense_1x28x28_100x100_10.yaml  dense_3x32x32_100x100_10.yaml
configs/transfer_learning/: 10_last_layers.yaml
src/: cli.py  compare.py  eval.py  experiments.py  train.py
src/comparators/: comparator.py  correlation.py
src/comparators/utils/: correlation.py  db_index.py
src/data/: image_datamodule.py  mnist_datamodule.py
src/figures/: __init__.py  accuracy.py  correlation.py  db_index.py  figure.py  weight_bias_variance.py
src/initializers/: initializer.py  mean_field.py
src/initializers/utils/: conv_delta_orthogonal_initialization.py
src/models/: image_classification.py  inspectable.py
src/models/components/: convolutional.py  convolutional_net.py  dense.py  dense_net.py  inspectable.py
src/transfer_learning_criticality/: experiments.py
src/transfer_learning_criticality/figures/: __init__.py  _default.py  cluster.py  correlation.py  model.py  variance.py
src/transfer_learning_criticality/mean_field/: __init__.py
src/transfer_learning_criticality/neural_nets/: __init__.py  _base.py  cnn.py  convolutional.py  fdnn.py  feedforward.py  simple_dnn.py
src/transfer_learning_criticality/noise/: __init__.py  gaussian.py
src/transfer_learning_criticality/schemas/: config.py
src/transfer_learning_criticality/types/: config.py
src/transfer_learning_criticality/util/: correlation.py  mean_field.py  model.py  runner.py  sigint_handler_context.py
