[build-system]
requires = ["pdm"]

[project]
name = ""
version = "0.0.1"
description = ""
authors = [
    {name = "Marc Steiner", email = "msteiner@ini.uzh.ch"},
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.22",
    "plotly>=5.11.0",
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "kaleido==0.2.1",
    "pip>=22.3.1",
    "scikit-learn>=1.2.0",
    "mypy>=0.991",
    "pandas-stubs>=1.2.0.62",
    "torchinfo>=1.7.1",
    "torch-optimizer>=0.3.0",
    "pyarrow>=11.0.0",
    "pyyaml>=6.0",
    "click>=8.1.3",
    "types-PyYAML>=6.0.12.3",
    "types-click>=7.1.8",
    "tqdm>=4.64.1",
    "dataclass-wizard[yaml]>=0.22.2",
    "numba==0.56",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]
